edpdgen_lib/src/stardict/input_parsers/snapshots/edpdgen_lib__stardict__input_parsers__dps__tests__word_data_tests___0.snap
---
source: edpdgen_lib/src/stardict/input_parsers/dps.rs
expression: word_data

---
<hr />
<div>
  <h4 id="kaṇṇa_1_dpy">kaṇṇa 1</h4>
  <table class="word-info-table-dpy">
    <tbody><tr><td>Grammar</td><td><span>nt</span></td></tr><tr><td>English</td><td><span><strong>ear</strong></span></td></tr><tr><td>Russian</td><td><span><strong>ухо</strong></span></td></tr><tr><td>Sanskrit</td><td><span>karṇa</span></td></tr><tr><td>Notes</td><td><span>notes1</span></td></tr><tr><td>Variant</td><td><span>variants1</span></td></tr></tbody>
  </table>
  <br /><span>tato tvaṃ, moggallāna, ubho <b>kaṇṇa</b>-sotāni āviñcheyyāsi, pāṇinā gattāni anumajjeyyāsi.</span><br /><span class="sutta-source-dpy"><i>AN 7.61 pacalāyamāna sutta</i></span><br /><br /><span>pharusaṃ vācaṃ pahāya pharusāya vācāya paṭivirato hoti, yā sā vācā n’elā <b>kaṇṇa</b>-sukhā pemanīyā hadayaṅ’gamā porī bahujanakantā bahujanamanāpā tathārūpiṃ vācaṃ bhāsitā hoti</span><br /><span class="sutta-source-dpy"><i>MN 51 anupubba-sikkhā</i></span><br /><br /><span class="sutta-source-dpy"><i>Teachings</i></span><br /><br /></div>
<div>
[ITABLE: kaṇṇa 1]
</div>
<br/>
<a class="dictionary-feedback-link-dpy" href="fb_url?entry.267696921=host url&entry.1433863141=host version" target="_blank">spot a mistake in the dictionary? fix it here!</a>
