edpdgen_lib/src/stardict/input_parsers/snapshots/edpdgen_lib__stardict__input_parsers__dps__tests__word_data_tests___2_false.snap
---
source: edpdgen_lib/src/stardict/input_parsers/dps.rs
expression: word_data

---
<hr />
<div>
  <h4 id="dasama_dps">dasama</h4>
  <table class="word-info-table-dps">
    <tbody><tr><td>Grammar</td><td><span>ordin, from dasa</span></td></tr><tr><td>English</td><td><span><strong>tenth (10th)</strong></span></td></tr><tr><td>Russian</td><td><span><strong>десятый (10-й)</strong></span></td></tr><tr><td>Construction</td><td><span>dasa + ma</span></td></tr><tr><td>Sanskrit</td><td><span>daśama</span></td></tr><tr><td>Notes</td><td><span>notes2</span></td></tr></tbody>
  </table>
  <br /><span>aṭṭhamaṃ adhiṭṭhāna-pārami, navamaṃ mettā-pārami, <b>dasamaṃ</b> upekkhā-pāramī'ti</span><br /><span class="sutta-source-dps"><i>Sri Lanka buddha-vassa-sajjhāyanā</i></span><br /><br /></div>
<div>
[ITABLE: dasama]
</div>
<br/>
<a class="dictionary-feedback-link-dps" href="fb_url?entry.267696921=host url&entry.1433863141=host version" target="_blank">spot a mistake in the dictionary? fix it here!</a>
